                   Questiaux for reporting the bug.

             • ‘calc_MaxDose()’

                 • Fixed a bug in the console output, which provided
                   wrong values for the asymmetric error on gamma (Note
                   that the values in the output object were correct!).
                   Thankfully reported by Xue Rui.

             • ‘calc_OSLLxTxRatio()’

                 • Add argument ‘use_previousBG’ to use the background
                   of the Lx-curve to get the net signal of the
                   Tx-curve (request #15).

             • ‘fit_CWCurve()’

                 • Change order of ‘RLum.Results’ output list elements,

                 • rename first element to ‘data’.

             • ‘model_LuminescenceSignals()’

                 • Update function arguments to account for changes in
                   RLumModel version 0.2.0.

             • ‘plot_DetPlot()’

                 • Correct negative y-axis, the minimum is now the real
                   minimum.

             • ‘plot_GrowthCurve()’

                 • Reduce number of confusing warning,

                 • add new argument ‘mode’ to select the calculation
                   mode of the function.  This allows in particular to
                   only fit data without calculating a De or
                   calculating a De assuming an additive dose response
                   curve,

                 • account for the very specifc case that all dose
                   points are similar. The function stops with an error
                   and returns NULL,

                 • under weird circumstances points on the growth curve
                   were not plotted correctly; fixed.

             • ‘plot_RadialPlot()’

                 • Sometimes the function crashed with an out of bonds
                   error if more than one data set was provided; fixed,

                 • argument ‘negatives’ caused an error if not set to