@@ -5,18 +5,18 @@ data(ExampleData.DeValues, envir = environment())
 
 ## calculate statistics and show output
 set.seed(1)
-temp <- calc_Statistics(ExampleData.DeValues$BT998)
+temp <- calc_Statistics(ExampleData.DeValues$BT998, n.MC = 1000)
 
 
 test_that("check class and length of output", {
-  
+
   expect_equal(is(temp), c("list", "vector"))
   expect_equal(length(temp), 3)
-  
+
 })
 
 test_that("check weighted values from output", {
-  
+
   expect_equal(temp$weighted$n, 25)
   expect_equal(round(temp$weighted$mean, digits = 3), 2896.036)
   expect_equal(round(temp$weighted$median, digits = 2), 2884.46)
@@ -26,12 +26,12 @@ test_that("check weighted values from output", {
   expect_equal(round(temp$weighted$se.rel, digits = 6), 1.658977)
   expect_equal(round(temp$weighted$skewness, digits = 6), 1.342018)
   expect_equal(round(temp$weighted$kurtosis, digits = 6), 4.387913)
-  
-  
+
+
 })
 
 test_that("check unweighted values from output", {
-  
+
   expect_equal(temp$weighted$n, 25)
   expect_equal(round(temp$unweighted$mean, digits = 3), 2950.818)
   expect_equal(round(temp$unweighted$median, digits = 2), 2884.46)
@@ -41,12 +41,12 @@ test_that("check unweighted values from output", {
   expect_equal(round(temp$unweighted$se.rel, digits = 6), 1.908917)
   expect_equal(round(temp$unweighted$skewness, digits = 6), 1.342018)
   expect_equal(round(temp$unweighted$kurtosis, digits = 6), 4.387913)
-  
-  
+
+
 })
 
 test_that("check MCM values from output", {
-  
+
   expect_equal(temp$MCM$n, 25)
   expect_equal(round(temp$MCM$mean, digits = 3), 2950.992)
   expect_equal(round(temp$MCM$median, digits = 3), 2885.622)
@@ -56,6 +56,6 @@ test_that("check MCM values from output", {
   expect_equal(round(temp$MCM$se.rel, digits = 6), 1.999827)
   expect_equal(round(temp$MCM$skewness, digits = 3), 1286.082)
   expect_equal(round(temp$MCM$kurtosis, digits = 3), 4757.097)
-  
-  
+
+
 })
